--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,7 +91,7 @@
   --muted-foreground: oklch(0.705 0.015 286.067);
   --accent: oklch(0.274 0.006 286.033);
   --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
+  --destructive: oklch(0.569 0.2079 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.646 0.222 41.116);
@@ -116,5 +116,131 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  --_c: no-repeat radial-gradient(farthest-side, var(--color-primary) 92%, #0000);
+  background:
+    var(--_c) top,
+    var(--_c) left,
+    var(--_c) right,
+    var(--_c) bottom;
+  background-size: 12px 12px;
+  animation: l7 1s infinite;
+}
+@keyframes l7 {
+  to {
+    transform: rotate(0.5turn);
+  }
+}
+
+@keyframes faceIn {
+  0% {
+    /*transform: translateY(-200%) translateX(-50%);*/
+    opacity: 0;
+  }
+  100% {
+    /*transform: translateY(-50%) translateX(-50%);*/
+    opacity: 100%;
+  }
+}
+
+.faceIn {
+  animation: faceIn 0.15s ease-in-out;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 100%;
+    transform: translateY(0px);
+  }
+}
+
+.appear {
+  animation: appear 250ms ease-in-out;
+}
+
+.circle-spin-2 {
+  --size: 24px;
+  --stroke-width: calc(var(--size) / 6);
+  --accent-opacity: 0.25;
+  --color: var(--color-primary);
+  --animation-timing-function: linear;
+  --animation-duration: 1s;
+  position: relative;
+  width: var(--size);
+  height: var(--size);
+}
+
+.circle-spin-2::before,
+.circle-spin-2::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-width: var(--stroke-width);
+  border-style: solid;
+  border-radius: 50%;
+  transform: rotate(0deg);
+  animation: var(--animation-timing-function) var(--animation-duration) infinite
+    circle-spin-2-animation;
+}
+
+.circle-spin-2::before {
+  border-color: var(--color) var(--color) var(--color) transparent;
+  opacity: var(--accent-opacity);
+}
+
+.circle-spin-2::after {
+  border-color: transparent transparent transparent var(--color);
+}
+
+.circle-spin-2-invert {
+  --size: 24px;
+  --stroke-width: calc(var(--size) / 6);
+  --accent-opacity: 0.25;
+  --color: var(--color-primary-foreground);
+  --animation-timing-function: linear;
+  --animation-duration: 1s;
+  position: relative;
+  width: var(--size);
+  height: var(--size);
+}
+
+.circle-spin-2-invert::before,
+.circle-spin-2-invert::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-width: var(--stroke-width);
+  border-style: solid;
+  border-radius: 50%;
+  transform: rotate(0deg);
+  animation: var(--animation-timing-function) var(--animation-duration) infinite
+    circle-spin-2-animation;
+}
+
+.circle-spin-2-invert::before {
+  border-color: var(--color) var(--color) var(--color) transparent;
+  opacity: var(--accent-opacity);
+}
+
+.circle-spin-2-invert::after {
+  border-color: transparent transparent transparent var(--color);
+}
+
+@keyframes circle-spin-2-animation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
